--- a/docs/developer/getting-started/monorepo-packages.asciidoc
+++ b/docs/developer/getting-started/monorepo-packages.asciidoc
@@ -88,6 +88,7 @@ yarn kbn watch-bazel
 - kbn/securitysolution-io-ts-list-types
 - kbn/securitysolution-io-ts-types
 - @kbn/securitysolution-io-ts-utils
+- @kbn/securitysolution-list-utils
 - @kbn/securitysolution-utils
 - @kbn/server-http-tools
 - @kbn/std
