--- a/docs/management/connectors/action-types/email.asciidoc
+++ b/docs/management/connectors/action-types/email.asciidoc
@@ -25,6 +25,11 @@ Username::  Username for login type authentication.
 Password::  Password for login type authentication.
 
 [float]
+=== Connector networking configuration
+
+Use the <<action-settings, Action configuration settings>> to customize connector networking configurations. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
+
+[float]
 [[preconfigured-email-configuration]]
 ==== Preconfigured connector type
 
