--- a/docs/settings/alert-action-settings.asciidoc
+++ b/docs/settings/alert-action-settings.asciidoc
@@ -41,7 +41,7 @@ You can configure the following settings in the `kibana.yml` file.
 [cols="2*<"]
 |===
 | `xpack.actions.enabled`
-  | Feature toggle that enables Actions in {kib}. Defaults to `true`.
+  | Feature toggle that enables Actions in {kib}. Default: `true`.
 
 | `xpack.actions.allowedHosts` {ess-icon}
   | A list of hostnames that {kib} is allowed to connect to when built-in actions are triggered. It defaults to `[*]`, allowing any host, but keep in mind the potential for SSRF attacks when hosts are not explicitly added to the allowed hosts. An empty list `[]` can be used to block built-in actions from making any external connections. +
@@ -50,7 +50,7 @@ You can configure the following settings in the `kibana.yml` file.
  
 | `xpack.actions.customHostSettings` {ess-icon} 
   | A list of custom host settings to override existing global settings.
-  Defaults to an empty list. +
+  Default: an empty list. +
   +
   Each entry in the list must have a `url` property, to associate a connection
   type (mail or https), hostname and port with the remaining options in the
@@ -118,10 +118,12 @@ xpack.actions.customHostSettings:
 
 | `xpack.actions.customHostSettings[n]`
 `.tls.rejectUnauthorized` {ess-icon}
-  | *Deprecated. Use `xpack.actions.customHostSettings.tls.verificationMode` instead.* A boolean value indicating whether to bypass server certificate validation.
+  | Deprecated. Use <<action-config-custom-host-verification-mode,`xpack.actions.customHostSettings.tls.verificationMode`>> instead. A boolean value indicating whether to bypass server certificate validation.
   Overrides the general `xpack.actions.rejectUnauthorized` configuration
   for requests made for this hostname/port.
 
+[float]
+[[action-config-custom-host-verification-mode]]
 | `xpack.actions.customHostSettings[n]`
 `.tls.verificationMode`
   | Controls the verification of the server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection to the host server. Valid values are `full`, `certificate`, and `none`. 
@@ -146,10 +148,10 @@ xpack.actions.customHostSettings:
 
 | `xpack.actions`
 `.preconfiguredAlertHistoryEsIndex` {ess-icon}
-  | Enables a preconfigured alert history {es} <<index-action-type, Index>> connector. Defaults to `false`.
+  | Enables a preconfigured alert history {es} <<index-action-type, Index>> connector. Default: `false`.
 
 | `xpack.actions.preconfigured`
-  | Specifies preconfigured connector IDs and configs. Defaults to {}.
+  | Specifies preconfigured connector IDs and configs. Default: {}.
 
 | `xpack.actions.proxyUrl` {ess-icon}
   | Specifies the proxy URL to use, if using a proxy for actions. By default, no proxy is used.
@@ -161,27 +163,31 @@ xpack.actions.customHostSettings:
   | Specifies hostnames which should only use the proxy, if using a proxy for actions. The value is an array of hostnames as strings.  By default, no hosts will use the proxy, but if an action's hostname is in this list, the proxy will be used.  The settings `xpack.actions.proxyBypassHosts` and `xpack.actions.proxyOnlyHosts` cannot be used at the same time.
 
 | `xpack.actions.proxyHeaders` {ess-icon}
-  | Specifies HTTP headers for the proxy, if using a proxy for actions. Defaults to {}.
+  | Specifies HTTP headers for the proxy, if using a proxy for actions. Default: {}.
 
 a|`xpack.actions.`
 `proxyRejectUnauthorizedCertificates` {ess-icon}
-  | *Deprecated. Use `xpack.actions.tls.proxyVerificationMode` instead.*] Set to `false` to bypass certificate validation for the proxy, if using a proxy for actions. Defaults to `true`.
+  | Deprecated. Use <<action-config-proxy-verification-mode,`xpack.actions.tls.proxyVerificationMode`>> instead. Set to `false` to bypass certificate validation for the proxy, if using a proxy for actions. Default: `true`.
 
+[float]
+[[action-config-proxy-verification-mode]]
 a|`xpack.actions[n]`
 `.tls.proxyVerificationMode` {ess-icon}
 | Controls the verification for the proxy server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection to the proxy server. Valid values are `full`, `certificate`, and `none`. 
-Use `full` to perform hostname verification, `certificate` to skip hostname verification, and `none` to skip verification. *Default: `full`*. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
+Use `full` to perform hostname verification, `certificate` to skip hostname verification, and `none` to skip verification. Default: `full`. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
 
 | `xpack.actions.rejectUnauthorized` {ess-icon}
-  | *Deprecated. Use `xpack.actions.tls.verificationMode` instead*.] Set to `false` to bypass certificate validation for actions. Defaults to `true`. +
+  | Deprecated. Use <<action-config-verification-mode,`xpack.actions.tls.verificationMode`>> instead*. Set to `false` to bypass certificate validation for actions. Default: `true`. +
   +
   As an alternative to setting `xpack.actions.rejectUnauthorized`, you can use the setting
   `xpack.actions.customHostSettings` to set TLS options for specific servers.
 
+[float]
+[[action-config-verification-mode]]
 a|`xpack.actions[n]`
 `.tls.verificationMode` {ess-icon}
 | Controls the verification for the server certificate that {hosted-ems} receives when making an outbound SSL/TLS connection for actions. Valid values are `full`, `certificate`, and `none`. 
-  Use `full` to perform hostname verification, `certificate` to skip hostname verification, and `none` to skip verification. *Default: `full`*. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>.
+  Use `full` to perform hostname verification, `certificate` to skip hostname verification, and `none` to skip verification. Default: `full`. <<elasticsearch-ssl-verificationMode,Equivalent {kib} setting>>. +
   +
   As an alternative to setting `xpack.actions.tls.verificationMode`, you can use the setting
   `xpack.actions.customHostSettings` to set TLS options for specific servers.
@@ -189,14 +195,14 @@ a|`xpack.actions[n]`
 
 
 | `xpack.actions.maxResponseContentLength` {ess-icon}
-  | Specifies the max number of bytes of the http response for requests to external resources. Defaults to 1000000 (1MB).
+  | Specifies the max number of bytes of the http response for requests to external resources. Default: 1000000 (1MB).
 
 | `xpack.actions.responseTimeout` {ess-icon}
   | Specifies the time allowed for requests to external resources. Requests that take longer are aborted. The time is formatted as: +
   +
   `<count>[ms,s,m,h,d,w,M,Y]` +
   +
-  For example, `20m`, `24h`, `7d`, `1w`. Defaults to `60s`.
+  For example, `20m`, `24h`, `7d`, `1w`. Default: `60s`.
 
 
 |===
